Fix links not opening when clicking, fix play button on video items being out of place.

--- a/src/components/video/styledVideoItems/CompactVideoItem/CompactVideoItem.css
+++ b/src/components/video/styledVideoItems/CompactVideoItem/CompactVideoItem.css
@@ -6,6 +6,10 @@
 	row-gap: var(--pfy-spacing-standard-compact);
 	align-items: center;
 
+	& button {
+		align-self: flex-start;
+	}
+
 	.thumbnail-image {
 		grid-column: 1;
 		grid-row: 1;
